fix(nav): maintain consistent width on mobile and tablet, enable vertical scroll

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -231,7 +231,7 @@ a.nav-text:hover {
         position: fixed;
 		left: 50%;
     	transform: translateX(-50%);
-		top: 5rem;
+		top: 4rem;
 		background: transparent;
 		background-color: var(--color-primary-light);
 		width: 95vw !important;
